# engrave

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docs.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  recommend.md  require.pip  setup.cfg  setup.py  versions.json
3.2.2/: 404.html
3.2.6/: cli.md  index.html  index.md  quickstart.md
3.2.6/cli/: index.html
3.2.6/live-reload/: index.html
3.2.6/quickstart/: index.html
3.2.6/search/: search_index.json
3.2.x/templates/: index.html
docs/: 404.html  _var.scss  base.css  base.css.map  base.js  base.js.map  cli.md  error.css  error.css.map  error.js  error.js.map  index.css  index.css.map  index.html  live-reload.md  sidebar.css  sidebar.css.map  templates.md  versions.json
docs-src/: _base.html  _base.scss  _mixin.scss  _sidebar.html  base.js  base.scss  base.ts  cli.md  error.html  error.js  error.scss  index.html  index.html.md  index.md  index.scss  live-preview.md  live-reload.md  quickstart.md  sidebar.scss  templates.md
docs/3.2.2/cli/: index.html
docs/cli/: index.html
docs/live-reload/: index.html
docs/quickstart/: index.html
docs/search/: search_index.json
docs/templates/: index.html
engrave/: __init__.py
pillari/: __init__.py  __main__.py
skills/update-version-all-files/: SKILL.md
src/: __init__.py  __main__.py
src/engrave/: build.py  cli.py  dataclass.py  error.html  fastapi.py  log.py  main.py  process.py  server.py  template.py  watch.py
src/engrave/core/: build.py  cli.py  deps.py  process.py  watch.py
src/engrave/test/: template_test.py
src/engrave/util/: dataclass.py  log.py  process.py
src/test/template/: index.html
tests/: test_server.py  test_template.py
tests/core/: test_build_rules.py  test_cli.py  test_watch.py
tests/fixtures/project/config/: settings.yaml
tests/fixtures/project/src/: index.html
tests/fixtures/project/src/_partials/: ignored.html
tests/fixtures/project/src/assets/: app.js
tests/fixtures/project/src/data/: info.json
tests/fixtures/project/src/drafts/: skip.html
tests/fixtures/project/src/section/: index.html
tests/fixtures/server/dest/: index.html
tests/fixtures/server/dest/assets/: app.js
tests/fixtures/server/dest/nested/: index.html
tests/fixtures/server/src/: index.html
tests/fixtures/server/src/nested/: index.html
tests/fixtures/template/primary/: content.md  main.html  partial.html
tests/fixtures/template/secondary/: secondary.html  secondary.md
