[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engrave"
version = "3.1.4"
description = "A static site generator with live preview capability"
authors = [
  {name = "Nitipit Nontasuwan", email = "nitipit@gmail.com"}
]
maintainers = [
  {name = "Nitipit Nontasuwan", email = "nitipit@gmail.com"}
]
readme = "README.md"
keywords = ["static site generator", "web", "generator", "preview", "website", "template"]
license = "MIT"  # or license = {file = "LICENSE.txt"} for legacy declaration
license-files = ["LICENSE"]
dependencies = [
    "cyclopts>=3.11.2",
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "markupsafe>=3.0.2",
    "mistune>=3.1.2",
    "uvicorn>=0.34.0",
    "aiostream>=0.6.4",
    "dacite>=1.9.2",
    "ipython>=8.37.0",
    "watchfiles>=1.0.4",
]
requires-python = ">=3.10"

[project.scripts]
engrave = "engrave.main:app"
