[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engrave"
version = "3.2.6"
description = "A lightweight static-site generator built on Python and Jinja2"
authors = [
  {name = "Nitipit Nontasuwan", email = "nitipit@gmail.com"}
]
maintainers = [
  {name = "Nitipit Nontasuwan", email = "nitipit@gmail.com"}
]
readme = "README.md"
keywords = ["static site generator", "web", "generator", "preview", "website", "template"]
license = "MIT"  # or license = {file = "LICENSE.txt"} for legacy declaration
license-files = ["LICENSE"]
dependencies = [
    "cyclopts>=4,<5",
    "fastapi[standard]>=0.135.1,<1",
    "jinja2>=3.1.5,<4",
    "markupsafe>=3.0.2,<4",
    "mistune>=3.1.2,<4",
    "uvicorn>=0.34.0,<1",
    "aiostream>=0.6.4,<1",
    "dacite>=1.9.2,<2",
    "watchfiles>=1.1.1,<2",
]
requires-python = ">=3.10"

[project.urls]
Website = "https://keenlycode.github.io/engrave/"
Repository = "https://github.com/keenlycode/engrave"

[project.scripts]
engrave = "engrave.main:app"

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.10.1",
]
