[metadata]
name = engrave
version = 1.1.1dev
description = Engrave is a static website framework
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = static web framework
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5

[options]
include_package_data = True
packages = engrave
scripts = 
    bin/engrave
install_requires =
    jinja2
    mistune==2.0.0rc1
    watchgod
