[metadata]
name = engrave
version = 2.0.5
description = Engrave is a static website framework
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = static web framework
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
packages = engrave
python_requires = >=3.6
scripts = 
    bin/engrave
install_requires =
    jinja2 >= 3.1.0, < 3.2.0
    mistune >= 2.0.0, < 2.1.0
    watchgod >= 0.8.0, < 0.9.0
